cargo-features = ["edition2024"]

[package]
name = "piggy"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5"
solana-program = "2.2.0"

[dev-dependencies]
litesvm = "0.7"
solana-sdk = "2.3"
solana-client = "2.3"
solana-transaction-status-client-types = "2.3"
solana-address = "2.0"
