[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-client = "0.31.1"
factory = { version = "0.1.0", path = "../programs/factory", features=["no-entrypoint"]}
counter = { version = "0.1.0", path = "../programs/counter", features=["no-entrypoint"]}
